# python-sdk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish-test.yml  publish.yml  test.yml
src/screenshotmax/: __init__.py  client.py  enums.py  options.py  sdk.py
src/screenshotmax/services/: __init__.py  device.py  pdf.py  scrape.py  screencast.py  screenshot.py  task.py  usage.py
src/screenshotmax/tests/: test_client.py
tests/: test_client.py  test_options.py
